added a concept button, finished the solution and research sections

--- a/miranda.html
+++ b/miranda.html
@@ -155,27 +155,50 @@
             </div>
             <div class="col-md-9" id="modeltothemiddle">
                 <p class="description1">The CUI serves as the "front stage" handling logistical concerns while the stylist manages the "back stage" or the customer relationship.</p>
+                <br>
+                <a href="miranda.html#concept"><img id="conceptmiranda" src="images/miranda/conceptbutton.png" alt="Image placeholder" width="30%"></a>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-12">
                 <br>
                 <p id="rowoverview2">03 Approach</p>
                 <p id="subheader">Research</p>
-                <p class="description1"><b>Voice-based Competitors</b>Prior to building a CUI, our team took a deep dive into understanding the current market and features that make certain products stand out over others. We looked at chatbots and in-home devices, such as Alexa and Siri.</p>
+                <p class="description1"><b>Voice-based Competitor Analysis</b><br></br>Prior to building a CUI, our team took a deep dive into the <b>current market and features that make products stand out</b> over others.<br>We looked at <b>chatbots and in-home devices</b>, such as Alexa and Siri.</p>
+                <br>
+                <img src="images/miranda/companalysis.png" alt="Image placeholder" class="img-fluid" width="45%">
             </div>
-            <div class="col-md-6"></div>
+            <div class="col-md-6">
+              <br></br><br></br>
+              <p class="description1"><b>Ethnographic Research to Identify Opportunities</b><br>Our team split up and spoke with customers at malls and customers in the process of making online shopping decisions to understand where in-store shopping is lacking.</p>
+            </div>
+            <div class="col-md-6">
+              <img id="companalysis" src="images/miranda/opps.png" alt="Image placeholder" class="img-fluid" width="95%">
+            </div>
+            <div class="col-md-12">
+              <br></br>
+              <p class="description1"><b>Current CUIs in Retail</b><br>Many retailers have already begun to employ CUIs to solve the types of problems exposed in our ethnographic research.</p>
+              <br>
+              <img src="images/miranda/current.png" alt="Image placeholder" class="img-fluid" width="85%">
+              <br></br><br>
+              <p class="description1">My team came up with some ideas on how we could alleviate shopping pain points through our CUI.</p>
+              <img src="images/miranda/ideas.png" alt="Image placeholder" class="img-fluid" width="75%">
+            </div>
+            <div class="col-md-6">
+              <br></br>
+              <p id="subheader">Initial Design</p>
+              <p class="description1">We mapped pain points to potential features our CUI would have.</p>
+            </div>
+            <div class="col-md-6" id="concept">
+              <p id="subheader">Final Concept</p>
+            </div>
 
 
-
-                <p id="subheader">Initial Design</p>
+<!--
                 <p id="subheader">Evaluation & Iteration</p>
                 <p id="subheader">Final Prototype</p>
                 <p id="rowoverview2">04 Reflection + Future Steps</p>
                 <p id="rowoverview2">05 Links</p>
+ -->
 
-
-
-Reflection + Future Steps
-Links
 
 
 
