--- a/miranda.html
+++ b/miranda.html
@@ -48,9 +48,11 @@
     </header>
 
     <!-- END templateux-navbar -->
+    <!--row align-items-center-->
+    <!--justify-content-center intro-->
     <section class="templateux-hero" data-scrollax-parent="true" id="constructionjunction">
       <div class="container">
-        <div class="row align-items-center justify-content-center intro">
+         <div class="row align-items-center justify-content-center intro">
             <img src="images/miranda/retail.png" alt="Image placeholder" width="1280" height="750">
        <!--    </div> -->
         </div>
@@ -58,8 +60,9 @@
     </section>
     <!-- END templateux-hero  -->
    <section class="templateux-portfolio-overlap mb-5" id="next">
-      <div class="container" data-aos="fade-up">
+     <div class="container" data-aos="fade-up">
         <div class="row justify-content-center">
+
           <!--intro section-->
           <div class="col-md-14">
             <p id="rowoverview2">01 Overview</p>
@@ -96,7 +99,7 @@
           </div>
 <!--section 2-->
  <div class="row mb-5">
-              <div class="col-md-6">
+              <div class="col-md-4" id="solution">
                 <p id="rowoverview2">02 Solution</p>
                   <p class="description1">The convenience of <b>online shopping has stagnated the number of in-store shoppers</b>. Our goal was two-fold:<br></br>
                   <ul class="description1">
@@ -104,10 +107,10 @@
                   <li>to make the shopping experience more enjoyable</li>
                   </ul></p>
               </div>
-              <div class="col-md-6">
-                  <img id="onlinefacts" src="images/miranda/onlineshopfacts.png" alt="Image placeholder" class="img-fluid" width="75%">
+              <div class="col-md-8">
+                  <img id="onlinefacts" src="images/miranda/onlineshopfacts.png" alt="Image placeholder" class="img-fluid" width="50%">
               </div>
-              <div class="col-md-6">
+              <div class="col-md-4">
                   <br></br>
                   <p class="description1">Miranda is a <b>conversational user interface that reinvigorates the joy of in-store shopping by building an experience that elevates department stores.</b><br></br></p>
                   <ul class="description1">
@@ -115,11 +118,11 @@
                     <li>making inventory management + customer service easier for floor associates</li>
                   </ul>
               </div>
-              <div class="col-md-6">
-                <iframe id="onlinefacts2" width="560" height="315" src="https://www.youtube.com/embed/8sVhzP1IaEk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <div class="col-md-8">
+                <iframe id="onlinefacts2" width="700" height="455" src="https://www.youtube.com/embed/8sVhzP1IaEk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <p class="description1">Concept Video</p>
               </div>
-              <div class="col-md-9" id="modeltothemiddle">
+              <div class="col-md-12">
                   <br>
                   <p id="subheader">Model Visuals</p>
                   <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -128,7 +131,7 @@
                     <li data-target="#myCarousel" data-slide-to="1"></li>
                     <li data-target="#myCarousel" data-slide-to="2"></li>
                   </ol>
-                  <div class="carousel-inner" width="50%">
+                  <div class="carousel-inner">
                     <div class="item active">
                       <img src="images/miranda/featureintro.png" alt="Los Angeles">
                     </div>
@@ -153,13 +156,13 @@
                 </a>
               </div>
             </div>
-            <div class="col-md-9" id="modeltothemiddle">
+            <div class="col-md-9">
                 <p class="description1">The CUI serves as the "front stage" handling logistical concerns while the stylist manages the "back stage" or the customer relationship.</p>
                 <br>
-                <a href="miranda.html#concept"><img id="conceptmiranda" src="images/miranda/conceptbutton.png" alt="Image placeholder" width="30%"></a>
+                <a href="miranda.html#concept"><img src="images/miranda/conceptbutton.png" alt="Image placeholder" width="30%"></a>
             </div>
             <div class="col-md-12">
-                <br>
+                <br></br><br>
                 <p id="rowoverview2">03 Approach</p>
                 <p id="subheader">Research</p>
                 <p class="description1"><b>Voice-based Competitor Analysis</b><br></br>Prior to building a CUI, our team took a deep dive into the <b>current market and features that make products stand out</b> over others.<br>We looked at <b>chatbots and in-home devices</b>, such as Alexa and Siri.</p>
@@ -175,26 +178,122 @@
             </div>
             <div class="col-md-12">
               <br></br>
-              <p class="description1"><b>Current CUIs in Retail</b><br>Many retailers have already begun to employ CUIs to solve the types of problems exposed in our ethnographic research.</p>
+              <p class="description1"><b>Current CUIs in Retail</b><br>Many retailers have already begun to employ CUIs to solve the types of problems exposed in our ethnographic research. We took a look at competitors as well as the overall size of the retail CUI market to consider the potential success of our product.</p>
               <br>
               <img src="images/miranda/current.png" alt="Image placeholder" class="img-fluid" width="85%">
               <br></br><br>
-              <p class="description1">My team came up with some ideas on how we could alleviate shopping pain points through our CUI.</p>
-              <img src="images/miranda/ideas.png" alt="Image placeholder" class="img-fluid" width="75%">
+              <p class="description1">My team came up with some ideas on how we could alleviate <b>shopping pain points</b> through our CUI.</p>
+              <img src="images/miranda/ideas.png" alt="Image placeholder" class="img-fluid" width="65%">
+            </div>
+            <div class="col-md-12">
+              <br></br>
+              <p id="subheader">Initial Design</p>
+              <p class="description1"><b>Feature Mapping</b><br> We mapped pain points to potential features our CUI could have, categorizing them into the four main functions</p>
+              <br>
+              <img src="images/miranda/features.png" alt="Image placeholder" class="img-fluid" width="85%">
+            </div>
+            <div class="col-md-4">
+              <br></br>
+              <p class="description1"><b>Scenario Flow</b><br>There are three main domains in retail shopping: fast fashion stores, department stores, and luxury retailers.</p>
+            </div>
+            <div class="col-md-8">
+              <img id="companalysis2" src="images/miranda/brands.png" alt="Image placeholder" class="img-fluid" width="95%">
+            </div>
+            <div class="col-md-12">
+              <br></br>
+              <p class="description1">We created a scenario flow and sample scenarios for each domain. See the process book in links for written scenarios.</p>
+              <img src="images/miranda/scenarioflow.png" alt="Image placeholder" class="img-fluid" width="55%">
+            </div>
+            <div class="col-md-12">
+              <br></br>
+              <p class="description1"><b>Storyboarding</b></p>
+              <p class="description1">We relayed the information from our scenarios into storyboards so we could user test our concept and decide which domain to hone in on. We tried to strike a balance in interviewing department store shoppers, luxury shoppers, and fast fashion shoppers.</p>
+              <img src="images/miranda/storyboardplanning.png" alt="Image placeholder" class="img-fluid" width="85%">
+              <br>
+              <p class="description1">Initial Sketches</p>
+              <br>
+              <img src="images/miranda/finalstories.png" alt="Image placeholder" class="img-fluid" width="85%">
             </div>
             <div class="col-md-6">
               <br></br>
-              <p id="subheader">Initial Design</p>
-              <p class="description1">We mapped pain points to potential features our CUI would have.</p>
+              <p class="description1"><b>Experience Prototyping</b></p>
+              <p class="description1">We used experience prototyping to identify potential gaps in our initial brainstorm of features and to think about the <b>technical implementation of our CUI - such as modeling feedforward, pre-attentive prompts, utterances, responses, error recovery and session termination.</b></p>
+              <iframe id="onlinefacts2" width="500" height="255" src="https://www.youtube.com/embed/IvFmh1Ge0nk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <br></br>
+              <iframe width="500" height="255" src="https://www.youtube.com/embed/fNTfM3RFx1I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
-            <div class="col-md-6" id="concept">
-              <p id="subheader">Final Concept</p>
+            <div class="col-md-6">
+              <img id="video" src="images/miranda/experience.png" alt="Image placeholder" class="img-fluid" width="95%">
+            </div>
+            <div class="col-md-6">
+              <br></br>
+              <p class="description1"><b>Initial Models</b></p>
+              <br>
+              <img src="images/miranda/sampleinteraction.png" alt="Image placeholder" class="img-fluid" width="95%">
+            </div>
+            <div class="col-md-6">
+              <br></br>
+              <img id="onlinefacts" src="images/miranda/twine_model.png" alt="Image placeholder" class="img-fluid" width="95%">
+              <p class="description1">Our first model was created using Twine - a sample end-to-end retail experience.</p>
+              <br></br>
+            </div>
+            <div class="col-md-12">
+              <p id="subheader">Iteration and Evaluation</p>
+              <p class="description1"></p>
+              <br>
+              <p class="description1"><b>Pivoting from Fast Fashion to Department Stores</b><br>Our initial hypothesis was that fast fashion stores tend to have the most difficult customer experience due to excessive inventory and lack of organization.</p>
+
+              Pivo$ng the market
+From Fast Fashion to Department Store
+
+Switching from "sales associates” to “stylists,” elevates the retail
+experience, so we asked ourselves which segment would be best
+served by an elevated experience. Department stores have a high
+touch service model, and a need for innova?on, so we decided to
+switch our focus from fast fashion to department store.
+Luxury stores were taken into account, but we decided that
+human interac?on was part and parcel of the luxury shopping
+experience, so CUIs would be dismissed.
+
+
+Reframing the opportunity From sale associate to stylist
+ A\er a second round of cri?ques, we were posed with an interes?ng ques?on.
+Could we create an in-store experience that mimics the personalized
+recommenda?ons of Trunk Club? We let the stylist focus on recommenda?ons
+for the user and the CUI focus on inventory tracking and store naviga?on.
+ We renamed the "sales associates” to “stylists” and revamped their roles:
+stylists collect the items that users tell their CUI they would like to try on, and
+add items to their fi`ng room that complement the users’ style, based on
+selected items and purchase history.
+In this way we “flipped the store,” keeping stylists behind the scenes and having
+ the CUI be the major player on the front stage.
+
+              <p class="description1"></p>
+            </div>
+            <div class="col-md-6">
+               <img src="images/miranda/service_blueprint.png" alt="Image placeholder" class="img-fluid" width="95%">
             </div>
 
+
+            </div>
+            <!-- <div class="col-md-6" id="concept">
+              <p id="subheader">Final Concept</p>
+            </div>
+ -->
 
 <!--
                 <p id="subheader">Evaluation & Iteration</p>
+                -framing interactions
+                --service blueprint
+                -modeling sessions + dialogues
+                -video creation and scripting
                 <p id="subheader">Final Prototype</p>
+
+                -final deliverables
+                -final video
+                -final cui features
+                -screenshots of the final model (link to the links section)
+                -videography
                 <p id="rowoverview2">04 Reflection + Future Steps</p>
                 <p id="rowoverview2">05 Links</p>
  -->
