push changes for miranda

--- a/miranda.html
+++ b/miranda.html
@@ -159,7 +159,7 @@
             <div class="col-md-9">
                 <p class="description1">The CUI serves as the "front stage" handling logistical concerns while the stylist manages the "back stage" or the customer relationship.</p>
                 <br>
-                <a href="miranda.html#concept"><img src="images/miranda/conceptbutton.png" alt="Image placeholder" width="30%"></a>
+                <a href="miranda.html#finalconcept"><img src="images/miranda/conceptbutton.png" alt="Image placeholder" width="30%"></a>
             </div>
             <div class="col-md-12">
                 <br></br><br>
@@ -239,55 +239,49 @@
             </div>
             <div class="col-md-12">
               <p id="subheader">Iteration and Evaluation</p>
-              <p class="description1"></p>
+              <p class="description1"><b>Inspiration from Trunk Club</b><br></br>Trunk Club is a <b>personalized mid- to high-end clothing service</b> that pioneered the <b>at-home try-on model within the men's clothing industry.</b>After a second round of critiques, we were posed with an interesting question - could we create an in-store experience that mimics the personalized recommendations of Trunk Club? We <b>renamed "sales associates" to "stylists" and revamped their roles</b>: stylists collect the items that users tell their CUI they would like to try one, and add items to their fitting room that complement the users' style, based on selected items and purchase history. In this way <b>"we flipped the store"</b>, keeping stylists behind the scenes and having the CUI be the major player on the front stage.</p>
+            </div>
+            <br></br>
+            <div class="col-md-4">
+              <br></br>
+              <p class="description1"><b>Pivoting from Fast Fashion to Department Stores</b><br></br>Our initial hypothesis was that fast fashion stores would benefit the most from a conversational user interface since they tend to have the most difficult customer experience due to excessive inventory and lack of organization. <b>Switching from "sales associates” to “stylists,” elevates the retail experience</b>, so we asked ourselves which segment would be best served by an elevated experience. <b>Department stores have a high touch service model, and a need for innovation, so we decided to switch our focus from fast fashion to department stores</b>, especially given that having a conversational agent in fashion stores would potentially detract the typical customer base. Luxury stores were taken into account, but we decided that human interactioon was a fundamental part and parcel of the luxury shopping experience, so CUIs would be dismissed.</p>
+            </div>
+            <div class="col-md-8" id="finalconcept">
+              <img id="onlinefacts" src="images/miranda/service_blueprint.png" alt="Image placeholder" class="img-fluid" width="100%">
+              <p class="description1">Reframing the service model based on stylists.</p>
+            </div>
+            <div class="col-md-12">
+              <br></br>
+              <p id="subheader">Final Concept</p>
               <br>
-              <p class="description1"><b>Pivoting from Fast Fashion to Department Stores</b><br>Our initial hypothesis was that fast fashion stores tend to have the most difficult customer experience due to excessive inventory and lack of organization.</p>
+              <p class="description1">Final CUI Features</p>
 
-              Pivo$ng the market
-From Fast Fashion to Department Store
-
-Switching from "sales associates” to “stylists,” elevates the retail
-experience, so we asked ourselves which segment would be best
-served by an elevated experience. Department stores have a high
-touch service model, and a need for innova?on, so we decided to
-switch our focus from fast fashion to department store.
-Luxury stores were taken into account, but we decided that
-human interac?on was part and parcel of the luxury shopping
-experience, so CUIs would be dismissed.
-
-
-Reframing the opportunity From sale associate to stylist
- A\er a second round of cri?ques, we were posed with an interes?ng ques?on.
-Could we create an in-store experience that mimics the personalized
-recommenda?ons of Trunk Club? We let the stylist focus on recommenda?ons
-for the user and the CUI focus on inventory tracking and store naviga?on.
- We renamed the "sales associates” to “stylists” and revamped their roles:
-stylists collect the items that users tell their CUI they would like to try on, and
-add items to their fi`ng room that complement the users’ style, based on
-selected items and purchase history.
-In this way we “flipped the store,” keeping stylists behind the scenes and having
- the CUI be the major player on the front stage.
-
-              <p class="description1"></p>
+              <p class="description1">Service Blueprint</p>
+              <img src="images/miranda/blueprint.png" alt="Image placeholder" class="img-fluid" width="85%">
+            </div>
+            <div class="col-md-12">
+              <br></br>
+              <p class="description1">Modeling Sessions & Dialogues</p>
+              <img src="images/miranda/modeling.png" alt="Image placeholder" class="img-fluid" width="85%">
             </div>
             <div class="col-md-6">
-               <img src="images/miranda/service_blueprint.png" alt="Image placeholder" class="img-fluid" width="95%">
+              <br></br><br></br>
+              <p class="description1">Video Scripting</p>
+
+            </div>
+            <div class="col-md-6">
+              <br></br>
+              <img  id="companalysis3" src="images/miranda/scripting.png" alt="Image placeholder" class="img-fluid" width="85%">
+            </div>
+
+            <div class="col-md-12">
+              <br>
+              <p class="description1">Video Creation</p>
+              <img src="images/miranda/videocutting.png" alt="Image placeholder" class="img-fluid" width="85%">
             </div>
 
 
-            </div>
-            <!-- <div class="col-md-6" id="concept">
-              <p id="subheader">Final Concept</p>
-            </div>
- -->
 
-<!--
-                <p id="subheader">Evaluation & Iteration</p>
-                -framing interactions
-                --service blueprint
-                -modeling sessions + dialogues
-                -video creation and scripting
-                <p id="subheader">Final Prototype</p>
 
                 -final deliverables
                 -final video
@@ -296,7 +290,7 @@ In this way we “flipped the store,” keeping stylists behind the scenes and h
                 -videography
                 <p id="rowoverview2">04 Reflection + Future Steps</p>
                 <p id="rowoverview2">05 Links</p>
- -->
+
 
 
 
