made changes to homepage

--- a/index.html
+++ b/index.html
@@ -63,6 +63,64 @@
     <section class="templateux-portfolio-overlap" id="work">
       <div class="container-fluid">
         <div class="row">
+           <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
+            <a class="project animsition-link" href="nasanew.html">
+              <figure>
+                <img src="images/NASA/playbook.png" alt="Free Template" class="img-fluid">
+              </figure>
+              <div class="project-hover">
+                <div class="project-hover-inner">
+                  <h2>NASA UX Internship</h2>
+                  <h4>Web/iPad Design</h4>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-6" data-aos="fade-up">
+            <a class="project animsition-link" href="newlemon.html">
+              <figure>
+                <img src="images/lemon/lemon.png" alt="Free Template" class="img-fluid">
+              </figure>
+              <div class="project-hover">
+                <div class="project-hover-inner">
+                  <h2>Lemon</h2>
+                  <h4>User Research + Branding + POC</h4>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+          <!--end row-->
+          <div class="row">
+           <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
+            <a class="project animsition-link" href="tiles.html">
+              <figure>
+                <img src="images/tiles/tiles.png" alt="Free Template" class="img-fluid">
+              </figure>
+              <div class="project-hover">
+                <div class="project-hover-inner">
+                  <h2>Tactile Tiles</h2>
+                  <h4>Survey Design + Physical Prototyping</h4>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-6" data-aos="fade-up">
+            <a class="project animsition-link" href="miranda.html">
+              <figure>
+                <img src="images/miranda/Artboard.png" alt="Free Template" class="img-fluid">
+              </figure>
+              <div class="project-hover">
+                <div class="project-hover-inner">
+                  <h2>Miranda Ai x Human</h2>
+                  <h4>Conversational User Interface Design</h4>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+        <!-- END row -->
+        <div class="row">
           <div class="col-md-6" data-aos="fade-up">
             <a class="project animsition-link" a href="junctionjourney.html">
               <figure>
@@ -77,35 +135,6 @@
             </a>
           </div>
           <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
-            <a class="project animsition-link" href="nasanew.html">
-              <figure>
-                <img src="images/NASA/playbook.png" alt="Free Template" class="img-fluid">
-              </figure>
-              <div class="project-hover">
-                <div class="project-hover-inner">
-                  <h2>NASA UX Internship</h2>
-                  <h4>Web/iPad Design</h4>
-                </div>
-              </div>
-            </a>
-          </div>
-        </div>
-        <!-- END row -->
-        <div class="row">
-          <div class="col-md-6" data-aos="fade-up">
-            <a class="project animsition-link" href="miranda.html">
-              <figure>
-                <img src="images/CUI/CUI1.jpg" alt="Free Template" class="img-fluid">
-              </figure>
-              <div class="project-hover">
-                <div class="project-hover-inner">
-                  <h2>Miranda Ai x Human</h2>
-                  <h4>Conversational User Interface Design</h4>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
             <a class="project animsition-link" href="darpa.html">
               <figure>
                 <img src="images/DARPA/DARPA1.jpg" alt="Free Template" class="img-fluid">
@@ -114,34 +143,6 @@
                 <div class="project-hover-inner">
                   <h2>DARPA - HCI Capstone</h2>
                   <h4>Desktop Interaction Design</h4>
-                </div>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6" data-aos="fade-up">
-            <a class="project animsition-link" href="tiles.html">
-              <figure>
-                <img src="images/tiles/blind.jpg" alt="Free Template" class="img-fluid">
-              </figure>
-              <div class="project-hover">
-                <div class="project-hover-inner">
-                  <h2>Tactile Tiles</h2>
-                  <h4>Survey Design + Physical Prototyping</h4>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="col-md-6" data-aos="fade-up">
-            <a class="project animsition-link" href="newlemon.html">
-              <figure>
-                <img src="images/lemon/food.jpg" alt="Free Template" class="img-fluid">
-              </figure>
-              <div class="project-hover">
-                <div class="project-hover-inner">
-                  <h2>Lemon</h2>
-                  <h4>User Research + Branding + POC</h4>
                 </div>
               </div>
             </a>
