changed some pictures and text on nasa

--- a/nasanew.html
+++ b/nasanew.html
@@ -75,7 +75,7 @@
               </div>
               <div class="col-md-3">
                 <span class=caption>Role</span>
-                <p class="description1">UX Mobile Design + Branding + Strategic Pitch</p>
+                <p class="description1">App/System Design + UI Design</p>
               </div>
               <br></br>
               <div class="col-md-8">
@@ -88,31 +88,32 @@
               </div>
               <div class="col-md-8">
                 <span class=caption id="rowoverview">Impact</span>
-                <p class="description1">The <b>system design updates and UI changes</b> I made will be implemented for the next <a href="https://www.nasa.gov/mission_pages/NEEMO/index.html"><font color="#DAA520">NASA NEEMO</font></a> analog mission in Summer 2020. The hope is the software can ultimately be used for the <b>Mars 2020</b> mission! </p>
+                <p class="description1">The <b>system design updates and UI changes</b> I made will be implemented for the next <a href="https://www.nasa.gov/mission_pages/NEEMO/index.html"><font color="#DAA520">NASA NEEMO</font></a> analog mission in Summer 2020. The hope is the software can ultimately be used for the <font color="#DAA520">Mars 2020</font></a> mission! </p>
               </div>
               <div class="col-md-12">
-                <br></br>
                 <hr id="pushdown">
               </div>
             </div>
           <!-- </div> -->
           <!-- <img src="images/CJ/breakline.jpg" id="break" width=1268> -->
             <div class="row mb-5">
-              <div class="col-md-6">
-                <p id="rowoverview2">02 Solution</p>
-                <p class="description1">My original assignment for this project was mostly UI changes (hotkeys, shortcuts). Pretty quickly, I noticed that the Playbook system wasn't as efficient as it could be. My final concept consisted of both <b>UI changes but also cleaning up the overall system design.</b></p>
-              </div>
               <div class="col-md-12">
-                <p class="text-center mb-4" id="uservisual"><img src="images/NASA/nasavisual7.png" alt="Image placeholder" class="img-fluid" width="200%"></p>
-                <p class="description1" id="userflow2">The proposed user flow <b>cuts the number of clicks by 44%</b>! Although it's only a few clicks change per action, it easily adds up as crew members are constantly changing their schedules throughout spaceflight. The key changes were <b>repurposing the activity tray</b> as a space where actions can also occur to activities and not just as an informational space. This eliminated the need for pop-ups and the like. Additionally, <b>cutting the preferences</b> to the bare minimum really helped in saving clicks (for example having an entry rather than click through a long list of numbers).</p>
+                <p id="rowoverview2">02 Solution</p>
+                <p class="description1">My final concept consisted of both <b>UI changes but also cleaning up the overall system design.</b></p>
+                <img src="images/NASA/nasavisual7.png" alt="Image placeholder" class="img-fluid" width="200%">
+                <br>
               </div>
+              <div class="col-md-6">
+                <p class="description1" id="userflow2">The proposed user flow <b>cuts the number of clicks by 44%</b>! Although it's only a few clicks change per action, it easily adds up as crew members are constantly changing their schedules throughout spaceflight.<br><br><b><font color=" #A9A9A9">01</font></b><b> repurposing the activity tray</b> to be a space where actions can<br>also occur to activities<br></br><b><font color=" #A9A9A9">02</font></b><b> cutting the preferences</b> (ex: having an entry rather than click<br>through a long list of numbers).</p>
+              </div>
+              <div class="col-md-6"></div>
               <div class="col-md-6">
                 <br>
-                  <p id="subheader">Hotkey/Shortcut Videos</p>
+                  <p id="subheader">Shortcut action flow videos</p>
                   <p class="description1">There are common shortcuts astronauts use on board a mission. Our goal was to <b>reduce the time</b> required go through these actions through <b>buttons</b> and more <b>efficient action flows.</b></p>
               </div>
               <div class="col-md-6" id="pushdown2">
-                  <p class="description1" >Make Copies</p>
+                  <p class="description1" >Make copies</p>
                   <iframe width="500" height="255" src="https://www.youtube.com/embed/l6aGsVMrcuA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                   <br>
                   <p class="description1" >Recurrence</p>
@@ -137,18 +138,23 @@
               </div>
               <div class="col-md-12">
                   <br>
+                  <p id="subheader">Playbook Discovery Tree</p>
                   <p class="text-center mb-4" id="probvisnasa"><img src="images/NASA/nasavisual4.png" alt="Image placeholder" class="img-fluid" width="400%"></p>
               </div>
               <br></br>
+              <div class="col-md-6">
+                <br>
+                <p class="description1">I <b>interviewed current team members</b> that have used Playbook on previous NEEMO missions to better understand the <b>system and the motivation</b> behind its use.<p>
+              </div>
+              <div class="col-md-6"></div>
               <div class="col-md-12">
-                <br></br>
                  <p class="text-center mb-4" id="probvisnasa"><img src="images/NASA/nasavisual3.png" alt="Image placeholder" class="img-fluid" width="400%"></p>
               </div>
               <br></br>
               <div class="col-md-6">
                 <br></br>
                 <p id="subheader"><b>System Design</b></p>
-                <p class="description1">As I was playing around with the tester site, I noticed that it took a <b>considerable number of clicks</b> to commit to a certain action. I noticed this had a lot to do with the design of the Playbook system, specifically having an <b>action tray</b> - a tray that pops out when you need to make edits to the schedule. Before going into my main tasking, I decided to see if we could <b>clean up the user flow</b> of editing something. </p>
+                <p class="description1">As I was playing around with the tester site, I noticed that it took a <b>considerable number of clicks</b> to commit to a certain action. I noticed this had a lot to do with the design of the Playbook system, specifically having an <b>action tray</b> - a tray that pops out when you need to make edits to the schedule.</p>
               </div>
               <div class="col-md-6">
                 <p class="text-center mb-4" id="pushdown3"><img src="images/NASA/nasavisual5.png" alt="Image placeholder" class="img-fluid" width="200%"></p>
@@ -160,52 +166,43 @@
               <div class="col-md-6">
                 <br></br>
                 <p id="subheader">Shortcut Flows</p>
-                  <p class="description1">There were <b>three shortcut flows</b> that I worked on during the internship: <b>Copy, Distribute</b> (later renamed Recurrence), and <b>Slice.</b> I also worked on making multiselect easier (changing multiple activities), which you can view in my Internship Final Presentation linked below.</p>
+                  <p class="description1">There were <b>three shortcut flows</b> that I worked on: <b>Copy, Distribute</b> (later renamed Recurrence), and <b>Slice.</b> I also worked on making <b>multiselect</b> easier (changing multiple activities), which you can view in my Internship Final Presentation linked below.</p>
               </div>
               <div class="col-md-12">
-                <p id="subheadervideo">Copy</p>
-                  <p class="text-center mb-4" id="uservisual"><img src="images/NASA/makecopies.png" alt="Image placeholder" class="img-fluid" width="60%"></p>
+                  <p class="description1"><b>Copy</b></p>
+                  <p class="text-center mb-4" id="uservisual"><img src="images/NASA/makecopies.png" alt="Image placeholder" class="img-fluid" width="70%"></p>
               </div>
               <div class="col-md-12">
-                  <p id="subheadervideo">Recurrence</p>
-                  <p class="text-center mb-4" id="uservisual"><img src="images/NASA/recurrence.png" alt="Image placeholder" class="img-fluid" width="60%"></p>
+                  <p id="subheadervideo"><b>Recurrence</b></p>
+                  <p class="text-center mb-4" id="uservisual"><img src="images/NASA/recurrence.png" alt="Image placeholder" class="img-fluid" width="70%"></p>
               </div>
               <div class="col-md-12">
-                <p id="subheadervideo">Slice</p>
-                  <p class="text-center mb-4" id="uservisual"><img src="images/NASA/slice.png" alt="Image placeholder" class="img-fluid" width="60%"></p>
+                <p id="subheadervideo"><b>Slice</b></p>
+                  <p class="text-center mb-4" id="uservisual"><img src="images/NASA/slice.png" alt="Image placeholder" class="img-fluid" width="70%"></p>
               </div>
-              <div class="col-md-6">
+              <div class="col-md-12">
                 <br>
                 <p id="subheader">Poster Presentation</p>
-                <p class="description1">These are posters we used at the NASA Intern Research Symposium - NASA HUNCH was my other project during the summer (website redesign). Feel free to checking out my <a href="https://medium.com/@SimranJobanputra"><font color="#DAA520">Medium</font></a> for more information!</p>
+                <p class="description1">Poster from the NASA Intern Research Symposium (see links for the other project poster).
                 <embed src="images/NASA/playbook.pdf" width="1200" height="600" type="application/pdf">
               </div>
               <div class="col-md-12">
-                <br></br>
+                <hr id="pushdown">
                 <p id="rowoverview2">04 Future Steps + Reflection</p>
                 <p class="description1">Currently, the work is being implemented, so the future steps would be to ensure that everything is deployed successfully. The site is currently being worked on and the changes on Playbook are going to be implemented for the next NEEMO mission. This was my first UX internship and the first time I actually implemented my designs beyond the classroom. Therefore, there was a huge learning curve for me in terms of being able to work directly with software engineers on implementation in an Agile environment.  What I realized is that things often have to be spelled out or extremely pixel perfect and specified for a software engineer to carry out a design exactly as it is meant to be. Outside of improving my design skills, working with JIRA and understanding how to document interactions and specifications were some of the most valuable things I learned during this internship. </p>
 
-                This summer, I had the incredible opportunity to be a <b>UX Designer for the SPIFe (Scheduling and Planning System for Exploration) team at the NASA AMES Research Center</b>. I'm going to take a deep dive into one of my projects: <b>Playbook</b>. Feel free to peruse my  account for more information on my Internship!
-
-                The team had a work process similar to that of a startup embedded within a larger organization. Over the summer, I grew my technical design knowledge and was able to learn how to work with software developers in an agile development environment.
+                This summer, I had the incredible opportunity to be a <b>UX Designer for the SPIFe (Scheduling and Planning System for Exploration) team at the NASA AMES Research Center</b>The team had a work process similar to that of a startup embedded within a larger organization. Over the summer, I grew my technical design knowledge and was able to learn how to work with software developers in an agile development environment.
               </div>
-
               <div class="col-md-12">
+                <hr id="pushdown">
                 <br></br>
                 <p id="rowoverview2">05 Links</p>
-                <p class="description1"><a href="images/NASA/">Final Internship Deck</a></p>
-
-
-                -final internship deck
+                <p class="description1"><a href="images/NASA/final.pdf"><font color="#DAA520">Final Internship Deck</font></a></p>
+                <p class="description1"><a href="images/NASA/hunch.pdf"><font color="#DAA520">NASA HUNCH Poster</font></a></p>
               </div>
               <div class="col-md-12">
                 <p id="rowoverview2">Pictures from the Summer</p>
-
-
-
               </div>
-
-
     <footer class="templateux-footer">
       <div class="container-fluid">
         <div class="row">
