changed profile picture

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ The dots/circles -->
             Growing up as a first-generation Indian American in the city of Chicago, I have always embraced being a part of two completely distinct perspectives in order to solve a complicated puzzle. For this reason, I'm passionate about coming up with innovative solutions that can serve the needs of many different communities. Outside of the classroom, I'm super involved in the dance community and even started my own team, <a href="https://www.youtube.com/results?search_query=cmu+sahara"><font color="#A9A9A9">CMU Sahara</font></a>. I also loved getting involved in entrepreneurship and building out new ideas.<br></br>Please feel free to reach out to me to collaborate or give any feedback at sjobanpu@cs.cmu.edu!</p>
           </div>
           <div class="column" data-aos="fade-up">
-            <img id="photo" src="images/Profile.png" alt="Free Template" width="80%">
+            <img id="photo" src="images/home/Profile.png" alt="Free Template" width="80%">
           </div>
         </div>
       </div>
